# golden-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build-setup.yml  dist-workspace.toml  lefthook.yml  sonar-project.properties
.cargo/: config.toml
.claude-plugin/: marketplace.json
.github/workflows/: golden-ci.yml  release.yml  tag.yml
collections/: sample-collection.json
crates/golden-cli/: Cargo.toml
crates/golden-cli/src/: cli.rs  discovery.rs  exit.rs  filter.rs  lib.rs  load.rs
crates/golden-cli/src/commands/: completion.rs  curl.rs  doctor.rs  history.rs  import.rs  init.rs  list.rs  mod.rs  openapi.rs  run.rs  send.rs  upgrade.rs
crates/golden-cli/src/reporter/: json.rs  json_stream.rs  junit.rs  mod.rs  pretty.rs  tap.rs
crates/golden-cli/src/tui/: app.rs  edit.rs  event.rs  format.rs  loader.rs  mod.rs  run_state.rs  search.rs  tree.rs  worker.rs
crates/golden-cli/src/tui/ui/: mod.rs  overlay.rs  request_pane.rs  response_pane.rs  statusbar.rs  tree_pane.rs
crates/golden-cli/tests/: history_cmd.rs  list_cmd.rs  run_cmd.rs  send_cmd.rs  smoke.rs
crates/golden-core/: Cargo.toml
crates/golden-core/examples/: spike_pm.rs
crates/golden-core/src/: curl.rs  data.rs  download.rs  env.rs  history.rs  http.rs  import.rs  init.rs  lib.rs  model.rs  multipart.rs  result.rs  runner.rs  store.rs  subst.rs  viewers.rs
crates/golden-core/src/sandbox/: mod.rs  pm.rs  prelude.js  shims.rs
crates/golden-core/tests/: editing_parity.rs
packaging/pkgx/: package.yml
packaging/scoop/: golden.json
plugins/golden/.claude-plugin/: plugin.json
plugins/golden/commands/: golden-create.md  golden-import.md  golden-openapi.md  golden-run.md  golden-send.md  golden-test.md
plugins/golden/skills/create/: SKILL.md
plugins/golden/skills/golden/: SKILL.md
plugins/golden/skills/import/: SKILL.md
plugins/golden/skills/openapi/: SKILL.md
plugins/golden/skills/run/: SKILL.md
plugins/golden/skills/send/: SKILL.md
plugins/golden/skills/test/: SKILL.md
xtask-conformance/: Cargo.toml
xtask-conformance/fixtures/: chai.json  chaining.json  rest.json
xtask-conformance/src/: diff.rs  main.rs  normalize.rs  oracle.rs
