[package]
name = "golden-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
reqwest.workspace = true
mime_guess = { workspace = true }
rquickjs.workspace = true
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
httpmock = "0.7"
